Step animations invalidate style on every rendering update whether or not they need to https://bugs.webkit.org/show_bug.cgi?id=215229 <rdar://problem/66636153>

Reviewed by Antoine Quint.

Source/WebCore:

Step timing functions with transforms try and fail to start accelerated which causes them to repeatedly schedule unnecessary rendering updates.

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::updateAcceleratedActions):

Step timing functions are never accelerated so don't bother trying to start them in accelerated state.
This is similar to treatmeant of unaccelerated properties.

LayoutTests:

* animations/steps-transform-rendering-updates-expected.txt:


Canonical link: https://commits.webkit.org/228686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266232 268f45cc-cd09-0410-ab3c-d52691b4dbfc